--- a/Lab-03.html
+++ b/Lab-03.html
@@ -14,7 +14,9 @@
     </style>
 </head>
 <body>
-    <h2>HTML Forms</h2>
+    <center>
+        <h2>HTML Forms</h2>
+    </center>
     <div>
         <!-- form attribute novalidate removes validation from the forms -->
         <form action="" autocomplete="on">
